tests/negative/bad8.sp
(* Invalid function declaration *)

factorial: Int (

main: Int () {
  num: Int = 5;
  fact: Int = factorial(num);
  print("Factorial: ", fact);
  return 0;
}
